--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "popper.js": "^1.16.1",
-    "rxjs": "~7.5.0",
+    "rxjs": "^6.6.7",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
